--- a/main.conf
+++ b/main.conf
@@ -12,7 +12,8 @@
    Mode=server
    Address=127.0.0.1
    Port=14550
-[UdpEndpoint ooo]
+
+[UdpEndpoint testpoint]
    Mode=normal
    Address=127.0.0.1
    Port=14551
@@ -21,8 +22,12 @@
    Mode=normal
    Address=127.0.0.1
    Port=14552
+#   AllowSrcSysIn=[22,1]
+   AllowSrcSysOut=[22]
+
 [UdpEndpoint receiver]
    Mode=normal
    Address=127.0.0.1
    Port=14553
-
+   AllowSrcSysIn=[21]
+ #  AllowSrcSysOut=[22]
